# magnify

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  check.sh  docs.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yaml  push.yaml
docs/: conf.py  index.md  index.rst
docs/source/: conf.py  index.rst
examples/: mrbles.ipynb
src/magnify/: __init__.py  accessor.py  assay.py  convert.py  file.py  filter.py  find.py  identify.py  loader.py  logger.py  pipeline.py  postprocess.py  preprocess.py  reader.py  registry.py  segment.py  stitch.py  util.py  utils.py
src/magnify/magniplot/: __init__.py  image.py  layout.py  ndplot.py  relation.py  style.py
src/magnify/plot/: __init__.py  image.py  mrbles.py  ndplot.py  relation.py  style.py  vis.py
tests/: test_beads.py  test_chip.py  test_stitch.py
