[project]
name = "magnify"
version = "0.10.1"
description = "A microscopy image processing toolkit."
authors = [
    {name = "Karl Krauth", email = "karl.krauth@gmail.com"},
    {name = "Xinxian Tian", email = "cicitian887@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <3.13"

dependencies = [
    "opencv-python>=4.0; sys_platform != 'darwin'",
    "opencv-python>=4.0,!=4.7.0.68; sys_platform == 'darwin'",
    "numpy>=1.22.0",
    "scipy>=1.9.0",
    "pandas>=2.0.3",
    "plotly>=5.18.0",
    "tifffile>=2021.11.2",
    "dask_image>=2024.5.3",
    "tqdm>=4.64",
    "types-tqdm>=4.64",
    "xarray[io]>=2023.01.0",
    "dask[complete]>=2022.02.0",
    "catalogue>=2.0.8",
    "beautifulsoup4>=4.10.0",
    "lxml>=5.0.0",
    "confection>=0.0.4",
    "scikit-learn>=1.2.0",
    "numba>=0.58.1",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "napari>=0.4.16"
]

[dependency-groups]
dev = [
    "mypy==1.0.1",
    "pre-commit==4.0.0",
    "pytest>=7.1.2",
    "ruff>=0.0.249",
    "sphinx>=5.3.0", 
    "sphinx-autodoc-typehints>=1.22",  
    "sphinx-press-theme>=0.8.0",
    "zarr>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true
warn_unused_configs = true
ignore_missing_imports = true